src/test/ui/issues/issue-46756-consider-borrowing-cast-or-binexpr.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-46756-consider-borrowing-cast-or-binexpr.rs:12:5
   |
LL |     light_flows_our_war_of_mocking_words(behold as usize);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---------------^
   |                                          |
   |                                          expected `&usize`, found `usize`
   |
note: function defined here
  --> $DIR/issue-46756-consider-borrowing-cast-or-binexpr.rs:5:4
   |
LL | fn light_flows_our_war_of_mocking_words(and_yet: &usize) -> usize {
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ---------------
help: provide an argument of the correct type
   |
LL |     light_flows_our_war_of_mocking_words({&usize});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-46756-consider-borrowing-cast-or-binexpr.rs:14:5
   |
LL |     light_flows_our_war_of_mocking_words(with_tears + 4);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^--------------^
   |                                          |
   |                                          expected `&usize`, found `_`
   |
note: function defined here
  --> $DIR/issue-46756-consider-borrowing-cast-or-binexpr.rs:5:4
   |
LL | fn light_flows_our_war_of_mocking_words(and_yet: &usize) -> usize {
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ---------------
help: provide an argument of the correct type
   |
LL |     light_flows_our_war_of_mocking_words({&usize});
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
